# HabitTracker

./: .clang-format  CMakeLists.txt  CircleProgressBar.cpp  CircleProgressBar.hpp  FilterProxyModel.cpp  FilterProxyModel.hpp  HabTableView.cpp  HabTableView.hpp  HabitDelegate.cpp  HabitDelegate.hpp  HabitDialog.cpp  HabitDialog.hpp  ImportDialog.cpp  ImportDialog.hpp  JKQTPlotterCustom.cpp  JKQTPlotterCustom.hpp  ListViewCustom.cpp  MainWindow.cpp  MainWindow.hpp  README.md  ReccurenceDialog.cpp  ReccurenceDialog.hpp  RegexInputDialog.cpp  RegexInputDialog.hpp  RelativeResultGraph.cpp  RelativeResultGraph.hpp  ResultsBarGraph.cpp  ResultsBarGraph.hpp  ScoreGraph.cpp  ScoreGraph.hpp  ScoreGraphSettingsDialog.cpp  ScoreGraphSettingsDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SoundPlayer.cpp  SoundPlayer.hpp  StatsDialog.cpp  StatsDialog.hpp  StatusProxyModel.hpp  dark_green.ini  (+3 more)
app_core/: CMakeLists.txt  DatabaseManager.hpp  Habit.cpp  Habit.hpp  HabitDao.cpp  HabitDao.hpp  HabitModel.cpp  HabitModel.hpp  ImportLoader.cpp  Settings.cpp  Settings.hpp  Utility.cpp  Utility.hpp  app_core_global.hpp  old_variable_cmake
